[package]
name = "runrun"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
linkme = "0.2.7"
futures = "0.3.15"
anyhow = "1.0.51"
async-trait = "0.1.52"
ethers = { version = "0.6.2", features = ["legacy", "dev-rpc"]}

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
